# maggtools

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  consultar_nfse.py  exemplo_real.xml  gerar_nfse.py  page_layout.py  pyproject.toml  ui_config.py
nfse/: __init__.py
nfse/application/: __init__.py  emitir_nfse.py
nfse/domain/: __init__.py  constants.py  models.py  services.py
nfse/infrastructure/http/: nfse_client.py
nfse/infrastructure/persistence/: sqlite_repo.py
nfse/infrastructure/security/: signer.py
nfse/infrastructure/storage/: xml_store.py
nfse/infrastructure/xml/: dps_builder.py
nfse/interfaces/: __init__.py  cli_emitir.py
pages/: cadastrar_prestador.py  cadastrar_tomador.py  configuracoes.py  consultar_nfse.py  dashboard.py  gerar_nfse.py  importar_nfse.py
