[project]
name = "nfe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=45.0.0",
    "lxml>=5.2.0",
    "requests>=2.32.0",
    "signxml>=4.0.0",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "Q", "COM"]
ignore = ["COM812", "Q001", "Q003"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.11",
]
